--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-screens": "^3.20.0",
     "react-native-sound": "^0.11.2",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-webview": "^12.0.0",
     "react-simple-chatbot": "^0.6.1"
   },
   "devDependencies": {
